test/syc/bad/attrusrpard.c
/*
 * Attribute 'usr' should not have any arguments (declaration)
 */

void foo(void) __attribute__((usr((1))));
